--- a/www/templates/auth_known.html
+++ b/www/templates/auth_known.html
@@ -1,12 +1,12 @@
 <ion-view view-title="AuthKnown">
     <ion-header-bar>
-        <h1 class="title">Welcome to Hooru.</h1>
+        <h1 class="title"><i class="icon ion-happy-outline"></i> Hooru</h1>
     </ion-header-bar>
     <ion-content>
         <form ng-submit="doAuth(user)">
             <div class="list">
                 <label class="item">
-                    <p>Choose yourself out of the list below.</p>
+                    <p>Wähle unten deinen bisherigen Benutzer:</p>
                 </label>
                 <label class="item item-input">
                     <input type="text" placeholder="What is your name?" ng-model="user.name">
