--- a/www/templates/auth.html
+++ b/www/templates/auth.html
@@ -1,21 +1,26 @@
 <ion-view view-title="Auth">
     <ion-header-bar>
-        <h1 class="title">Welcome to Hooru.</h1>
+        <h1 class="title"><i class="icon ion-happy-outline"></i> Hooru</h1>
     </ion-header-bar>
-    <ion-content>
-        <div class="list">
-            <label class="item">
-                <p>Please tell me, if we already know each other.</p>
+    <ion-content padding="true">
+        <div class="row">
+            <div class="col col-center center">
+                <i class="hoorulogo icon ion-happy-outline"></i>
+                <p class="hoorutext">Hooru</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <p>Hooru versucht Dich anhand der charakteristischen Dauer Deiner Tastendrücke zu erkennen.</p>
+                <p>Hat Hooru schon Daten über dich?</p>
+            </div>
+        </div>
+        <div class="row">
+            <label class="col">
+                <button class="button button-block button-positive" ng-click="doAuthYes()">Jep</button>
             </label>
-            <label class="item">
-                <div class="row">
-                    <label class="col">
-                        <button class="button button-block button-positive" ng-click="doAuthYes()">Yes</button>
-                    </label>
-                    <label class="col">
-                        <button class="button button-block button-positive" ng-click="doAuthNo()">No</button>
-                    </label>
-                </div>
+            <label class="col">
+                <button class="button button-block button-positive" ng-click="doAuthNo()">Nope</button>
             </label>
         </div>
     </ion-content>
