--- a/www/templates/auth_new.html
+++ b/www/templates/auth_new.html
@@ -1,19 +1,23 @@
 <ion-view view-title="AuthNew">
     <ion-header-bar>
-        <h1 class="title">Welcome to Hooru.</h1>
+        <h1 class="title"><i class="icon ion-happy-outline"></i> Hooru</h1>
     </ion-header-bar>
     <ion-content>
         <form ng-submit="doAuth(user)">
-            <div class="list">
-                <label class="item">
-                    <p>Please tell me your name.</p>
-                </label>
-                <label class="item item-input">
-                    <input type="text" placeholder="What is your name?" ng-model="user.name" autofocus>
-                </label>
-                <label class="item">
+            <div class="row">
+                <div class="col">
+                    <p>Bitte sag mir deinen Namen.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <input type="text" placeholder="Wie ist dein Name?" ng-model="user.name" autofocus>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
                     <button class="button button-block button-positive" type="submit">Login</button>
-                </label>
+                </div>
             </div>
         </form>
     </ion-content>
