--- a/www/templates/auth.html
+++ b/www/templates/auth.html
@@ -1,27 +1,30 @@
-<ion-view view-title="Auth">
+<ion-view view-title="AuthNew">
     <ion-header-bar>
         <h1 class="title"><i class="icon ion-happy-outline"></i> Hooru</h1>
     </ion-header-bar>
-    <ion-content padding="true">
-        <div class="row">
-            <div class="col col-center center">
-                <i class="hoorulogo icon ion-happy-outline"></i>
-                <p class="hoorutext">Hooru</p>
+    <ion-content>
+        <form ng-submit="doAuth(user)">
+            <div class="list">
+                <div class="item item-divider">
+                    <p>Bitte sag mir deinen Namen.</p>
+                </div>
+                <div class="item">
+                    <input type="text" placeholder="Wie ist dein Name?" ng-model="user.username" autofocus>
+                </div>
+                <div class="item item-divider">
+                    <p>Welches Device nutzt du?</p>
+                </div>
+                <div class="item">
+                    <ion-radio ng-model="user.device" ng-value="'Desktop'">Desktop</ion-radio>
+                    <ion-radio ng-model="user.device" ng-value="'Tablet'">Tablet</ion-radio>
+                     <ion-radio ng-model="user.device" ng-value="'Smartphone'">Smartphone</ion-radio>
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <p>Hooru versucht Dich anhand der charakteristischen Dauer Deiner Tastendrücke zu erkennen.</p>
-                <p>Hat Hooru schon Daten über dich?</p>
+            <div class="row">
+                <div class="col">
+                    <button class="button button-block button-positive" type="submit">Los geht's!</button>
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <label class="col">
-                <button class="button button-block button-positive" ng-click="doAuthYes()">Jep</button>
-            </label>
-            <label class="col">
-                <button class="button button-block button-positive" ng-click="doAuthNo()">Nope</button>
-            </label>
-        </div>
+        </form>
     </ion-content>
 </ion-view>
