--- a/www/templates/write.html
+++ b/www/templates/write.html
@@ -2,7 +2,7 @@
     <ion-header-bar>
         <h1 class="title"><i class="icon ion-happy-outline"></i> Hooru</h1>
     </ion-header-bar>
-    <ion-content scoll="false">
+    <ion-content scroll="false">
         <div class="row">
             <div class="col">
                 <p ng-bind-html="read"></p>
