--- a/www/templates/start.html
+++ b/www/templates/start.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Auth">
-    <ion-header-bar>
-        <h1 class="title"><i class="icon ion-happy-outline"></i> Hooru</h1>
+    <ion-header-bar class="bar bar-header bar-dark">
+        <h1 class="title">Hooru</h1>
     </ion-header-bar>
     <ion-content padding="true">
         <div class="row">
@@ -11,7 +11,7 @@
         </div>
         <div class="row">
             <div class="col">
-                <p>Hooru versucht Dich anhand der charakteristischen Dauer Deiner Tastendrücke zu erkennen. Dazu vergleicht Hooru das Profil Deiner Tastendrücke mit derzeit <span ng-bind-html="datacount"></span> Profilen anderer Nutzer.</p>
+                <p>Hooru versucht Dich anhand der charakteristischen Dauer Deiner Tastendrücke zu erkennen. Dazu vergleicht Hooru das Profil Deiner Tastendrücke mit den Tastendruck-Profilen anderer Nutzer.</p>
                 <p>Wenn Hooru Dein Profil noch nicht aufgezeichnet hat, so kannst Du dies nun tun. Wenn Hooru Dein Profil bereits kennt, kannst Du Dich erkenn lassen.</p>
             </div>
         </div>
