--- a/www/templates/start.html
+++ b/www/templates/start.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Auth">
+<ion-view view-title="Hooru">
     <ion-header-bar class="bar bar-header bar-dark">
         <h1 class="title">Hooru</h1>
     </ion-header-bar>
