--- a/www/templates/calc.html
+++ b/www/templates/calc.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Calc">
-    <ion-header-bar>
-        <h1 class="title"><i class="icon ion-happy-outline"></i> Hooru</h1>
+    <ion-header-bar class="bar bar-header bar-dark">
+        <h1 class="title">Trainieren</h1>
     </ion-header-bar>
     <ion-content scoll="false">
         <div class="row">
