finished implementation of Hooru Provider

--- a/www/templates/write.html
+++ b/www/templates/write.html
@@ -6,7 +6,7 @@
     <ion-content scroll="false">
         <div class="row">
             <div class="col">
-                <p>Bitte schreibe den unten stehenden Text ab:</p>
+                <p>Bitte schreibe den unten stehenden Text ab. Hooru zeigt dir Rechtschreibfehler durch eine rote Textmarkierung an. Bitte koriggiere den Text in diesem Fall, nur korrekte Texte können in die Bewertung einfließen.</p>
                 <div class="card">
                     <div class="item item-text-wrap">
                         <p ng-bind-html="read"></p>
