--- a/www/templates/auth.html
+++ b/www/templates/auth.html
@@ -1,17 +1,17 @@
 <ion-view view-title="AuthNew">
 
     <ion-header-bar class="bar bar-header bar-dark">
-        <button class="button button-clear"><i class="icoc ion-arrow-left-b"> zurück</i></button>
+        <a class="button button-clear" href="/#start"><i class="icoc ion-arrow-left-b"> zurück</i></a>
         <h1 class="title">Anmelden</h1>
     </ion-header-bar>
     <ion-content>
         <form ng-submit="doAuth(user)">
             <div class="list">
                 <div class="item item-divider">
-                    <p>Bitte sag mir deinen Namen.</p>
+                    <p>Bitte sag mir dein Pseydonum.</p>
                 </div>
                 <div class="item">
-                    <input type="text" placeholder="Wie ist dein Name?" ng-model="user.username" autofocus>
+                    <input type="text" placeholder="Wie ist dein Pseudonym?" ng-model="user.username" autofocus>
                 </div>
                 <div class="item item-divider">
                     <p>Welches Device nutzt du?</p>
@@ -20,6 +20,11 @@
                     <ion-radio ng-model="user.device" ng-value="'Desktop'">Desktop</ion-radio>
                     <ion-radio ng-model="user.device" ng-value="'Tablet'">Tablet</ion-radio>
                     <ion-radio ng-model="user.device" ng-value="'Smartphone'">Smartphone</ion-radio>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <p>Hinweis: Dein Pseudoym ist für alle anderen Benutzer einsehbar.</p>
                 </div>
             </div>
             <div class="row">
