removed unused zero value in training dataset

--- a/www/templates/start.html
+++ b/www/templates/start.html
@@ -12,7 +12,7 @@
         <div class="row">
             <div class="col">
                 <p>Hooru versucht Dich anhand der charakteristischen Dauer Deiner Tastendrücke zu erkennen. Dazu vergleicht Hooru das Profil Deiner Tastendrücke mit den Tastendruck-Profilen anderer Nutzer.</p>
-                <p>Wenn Hooru Dein Profil noch nicht aufgezeichnet hat, so kannst Du dies nun tun. Wenn Hooru Dein Profil bereits kennt, kannst Du Dich erkenn lassen.</p>
+                <p>Wenn Hooru Dein Profil noch nicht aufgezeichnet hat, so kannst Du dies nun tun. Wenn Hooru Dein Profil bereits kennt, kannst Du Dich erkennen lassen.</p>
             </div>
         </div>
         <div class="row">
