removed unused zero value in training dataset

--- a/www/templates/write.html
+++ b/www/templates/write.html
@@ -6,7 +6,7 @@
     <ion-content scroll="false">
         <div class="row">
             <div class="col">
-                <p>Bitte tippe den unten stehenden Text ab. Benutze dabei bitte weder Swipen noch andere alternative Eingabemethoden.</p><p>Hooru zeigt dir Rechtschreibfehler durch eine rote Textmarkierung an. Bitte korrigiere den Text in diesem Fall. Nur korrekte Texte können in die Bewertung einfließen.</p>
+                <p>Bitte tippe den unten stehenden Text ab. Hooru zeigt dir Rechtschreibfehler durch eine rote Textmarkierung an. Bitte korrigiere den Text in diesem Fall. Nur korrekte Texte können in die Bewertung einfließen.</p>
                 <div class="card">
                     <div class="item item-text-wrap">
                         <p ng-bind-html="read"></p>
